# molecular_analysis_dashboard

./: .dockerignore  .docstring-template.md  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  GITHUB_WORKFLOW.md  HOUSE_CLEANUP_SUMMARY.md  LICENSE  LLM_AGENT_GUIDE.md  NAVIGATION.md  PHASE_3B_IMPLEMENTATION_PLAN.md  PROJECT_MANAGEMENT.md  README.md  SECURITY.md  SETUP.md  STORAGE_TESTING_SUMMARY.md  SUPPORT.md  TROUBLESHOOTING.md  bootstrap.sh  docker-compose.yml  mkdocs.yml  pyproject.toml  test_clean_api.py  test_docking_use_case.py  test_gateway.sh  test_gnina_integration.py  test_ligand.sdf
.azure/: api-testing-guide.md  gnina-implementation-status.md  gnina-integration-plan.md
.github/: AGENTS.md  CODEOWNERS  PROJECT_MANAGEMENT.md  PROJECT_SETUP.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  epic.md  feature_request.md  performance.md  task.md  user_story.md
.github/workflows/: ci.yml  issue-pr-lifecycle.yml  project-automation.yml  project-board-management.yml
database/: .env.example  Dockerfile.db  Makefile  alembic.ini  docker-compose.db.yml  requirements.txt
database/alembic/: env.py
database/models/: __init__.py  base.py  metadata.py  results.py
database/scripts/: health_check.py  init_extensions.sql  migrate.py  seed.py
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.gateway  Dockerfile.storage  Dockerfile.worker  default.conf  gunicorn_conf.py  nginx.conf  storage.conf
docker/gateway/: nginx.conf
docker/gateway/conf.d/: gateway.conf  proxy_headers.conf  security.conf  ssl.conf  upstreams.conf
docker/gateway/lua/: auth.lua  init.lua  rate_limit.lua  request_id.lua  service_discovery.lua  task_router.lua
docs/: README.md  api.md  design.md  index.md
docs/api/: README.md  docking-api.md
docs/architecture/: README.md
docs/architecture/backend/: README.md  docking-engines.md  storage-adapters.md
docs/architecture/frontend/: README.md  frontend-description.md
docs/architecture/integration/: README.md  gateway.md
docs/architecture/system-design/: README.md  clean-architecture.md  framework-design.md  overview.md
docs/atlas/: imports.dot
docs/database/: README.md
docs/database/connection-routing/: README.md
docs/database/design/: README.md  erd.md  schema-proposal.md  schema.md
docs/database/management/: README.md  data-seeding.md  database-setup.md  migrations.md  performance.md
docs/database/testing/: README.md
docs/deployment/: README.md  cloud.md  local.md
docs/deployment/cloud/: production.md
docs/deployment/docker/: setup.md
docs/deployment/environments/: configuration.md  local.md
docs/development/: README.md
docs/development/getting-started/: README.md  architecture.md  setup.md
docs/development/guides/: README.md  contributing.md  developer-guide.md  repository-structure.md  service-integration-guide.md
docs/development/tools/: README.md  development-tools.md
docs/development/workflows/: README.md  cicd-pipeline.md  git-workflow.md  pull-request-process.md  release-management.md  testing-workflows.md
docs/getting-started/: architecture.md  quick-start.md
docs/implementation/: GNINA_INTEGRATION_STATUS.md  README.md  job-lifecycle-complete.md  plan.md  roadmap-post-neurosnap.md
docs/implementation/phases/: README.md
docs/integration/: neurosnap-api-guide.md
docs/operations/: README.md  api-gateway.md
docs/security/: README.md
frontend/: .env.example  .env.production  IMPLEMENTATION_GUIDE.md  eslint.config.js  jest.config.js  package-lock.json  package.json  prettier.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  setupTests.ts
project_design/: ALEMBIC_MIGRATION_STRATEGY.md  API_CONTRACT.md  API_GATEWAY.md  ARCHITECTURE.md  CODE_STRUCTURE.md  DATABASES.md  DATABASE_CONNECTION_ROUTING.md  DATABASE_TESTING_STRATEGY.md  DESIGN_OVERVIEW.md  DOCKING_ENGINE_INTEGRATION.md  FRAMEWORK_DESIGN.md  FRONTEND_ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  QUEUE_DESIGN.md  README.md  RUNBOOK.md  SCHEMA_PROPOSAL.md  SECURITY_ARCH.md  USERS_AND_ROLES.md  USE_CASES.md
project_design/Frontend Design/: AdminPanel_Implementation_Plan.md  Execute_task_example.md
src/molecular_analysis_dashboard/: __init__.py
src/yourpkg/: __init__.py  py.typed
temp/: SRS_Pipeline_Tutorial_P0076655_FINAL.ipynb
temp/scripts/: extract_protein_subdomain.py  generate_egfr_kinase_fasta.py  parse_mutations.py  prep_engine.py  submit_alphafold3_job.py  submit_gnina_job.py  submit_proteinmpnn_job.py
tests/: conftest.py
tests/api/: test_molecule_endpoints.py
tests/e2e/: test_gnina_docking_workflow.py  test_storage_workflow.py
tests/integration/: test_api_routes.py  test_storage_container.py  test_task_execution_api.py
tests/unit/: test_api_health_ready.py  test_celery_ping.py  test_project_automation.py  test_storage_adapter.py
tools/: extract_schema.py  fix_grid_v2.sh  health_check.py  render_graphs.py
(+121 files in other folders)
